# modcast-extension-api

./: .env.sample  Cargo.toml
src/: main.rs
src/airstack/: mod.rs
src/cache/: mod.rs
src/gql/: airstack_schema.graphql  cast_earnings_query.graphql  cast_embeds_query.graphql  far_scores_query.graphql  moxie_earnings_query.graphql
src/routes/: cast_earnings_handler.rs  cast_embeds_handler.rs  config.rs  far_scores_handler.rs  fetch_cast_from_neynar.rs  fids_handler.rs  mod.rs  user_earnings_handler.rs
