[package]
name = "extension-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
dotenvy = "0.15.7"
graphql_client = { version = "0.14.0", features = ["reqwest"] }
redis = { version = "0.27.2", features = ["tls-native-tls"] }
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }

